@@ -228,3 +228,9 @@ repositories {
 tasks.getByName("resolve").configure {
   dependsOn 'prepareOpenAPI'
 }
+
+test {
+  //Requiered by set environment variable annotation
+  //Explanation: https://junit-pioneer.org/docs/environment-variables/#warnings-for-reflective-access
+  jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED", "--add-opens=java.base/java.lang=ALL-UNNAMED")
+}
